--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -24,6 +24,7 @@
 
             <Button android:id="@+id/dummy_button" style="?metaButtonBarButtonStyle"
                 android:layout_width="0dp" android:layout_height="wrap_content"
+                android:onClick="move"
                 android:layout_weight="1" android:text="@string/dummy_button" />
 
         </LinearLayout>
