--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -11,4 +11,12 @@
     android:id="@+id/container"
     android:orientation="horizontal">
 
+    <!-- A RecyclerView with some commonly used attributes -->
+    <!--<android.support.v7.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    -->
+
 </LinearLayout>
