--- a/app/src/main/res/values-sw600dp/refs.xml
+++ b/app/src/main/res/values-sw600dp/refs.xml
@@ -7,7 +7,7 @@
     For more on layout aliases, see:
     http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
     -->
-    <item name="menu_item" type="layout">@layout/fragment_meal_grid</item>
+    <!--<item name="menu_item" type="layout">@layout/fragment_meal_grid</item>-->
 
     <!--
     Layout alias to replace the single-pane version of the layout with a
@@ -16,6 +16,5 @@
     For more on layout aliases, see:
     http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
     -->
-    <item name="fragment_orderhistory" type="layout">@layout/fragment_orderhistory_grid</item>
 
 </resources>
