--- a/app/src/main/res/layout/history_row.xml
+++ b/app/src/main/res/layout/history_row.xml
@@ -18,24 +18,22 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:id="@+id/order_details"
+                android:id="@+id/hist_order_details"
                 android:textSize="25sp" />
 
             <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="26dip"
-                android:ellipsize="marquee"
-                android:singleLine="true"
-                android:textSize="18sp"
-                android:textColor="#00C853" />
-
-            <TextView
-                android:id="@+id/meal_price"
+                android:id="@+id/hist_meal_price"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:textSize="19sp"
                 android:textColor="#ff5722" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:id="@+id/hist_timestamp" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
