--- a/app/src/main/res/layout/single_meal.xml
+++ b/app/src/main/res/layout/single_meal.xml
@@ -18,34 +18,37 @@
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:id="@+id/meal_name"
+                android:id="@+id/meal_meal_name"
                 android:textSize="25sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:id="@+id/meal_id"
+                android:id="@+id/meal_meal_id"
                 android:layout_gravity="right"
                 android:visibility="invisible" />
 
             <TextView
-                android:id="@+id/cafeteria"
+                android:id="@+id/meal_cafeteria"
                 android:layout_width="fill_parent"
                 android:layout_height="26dip"
                 android:ellipsize="marquee"
                 android:singleLine="true"
-                android:textSize="18sp"
-                android:textColor="#00C853" />
+                android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/meal_price"
+                android:id="@+id/meal_meal_price"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:textSize="19sp"
                 android:textColor="#ff5722" />
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/meal_availability"
+                android:textColor="#f02424" />
 
             <Button
                 style="?android:attr/buttonStyleSmall"
