--- a/app/src/main/res/layout/fragment_current_order.xml
+++ b/app/src/main/res/layout/fragment_current_order.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.migaliza.chakula_user.CurrentOrderFragment">
+    tools:context="com.example.migaliza.chakula_user.CurrentOrderFragment"
+    android:background="@drawable/cho">
 
     <ListView
         android:id="@+id/current_orders"
